--- a/newsyslog.8
+++ b/newsyslog.8
@@ -3,7 +3,7 @@
 .\" This file contains changes from the Open Software Foundation.
 .\"
 .\"	from: @(#)newsyslog.8
-.\"	$Id: newsyslog.8,v 1.1.1.1 1997/09/26 21:07:07 woods Exp $
+.\"	$NetBSD: newsyslog.8,v 1.8 1996/11/10 23:58:22 lukem Exp $
 .\"
 .\" Copyright 1988, 1989 by the Massachusetts Institute of Technology
 .\" 
@@ -110,7 +110,7 @@ account when determining when to trim the log file.
 The
 .I number of hours
 entry specifies the time separation between the trimming of the log
-file.  If this field is replaced by a ``*'', the the number of hours
+file.  If this field is replaced by a ``*'', the number of hours
 since the last time the log was trimmed will not be taken into
 consideration.
 .PP
@@ -118,7 +118,7 @@ The
 .I flags
 field specifies if the archives should have any special processing
 done to the archived log files.  The ``Z'' flag will make the archive
-files compressed to save space using /usr/ucb/compress.  The ``B'' flag
+files compressed to save space using /usr/bin/gzip.  The ``B'' flag
 means that the file is a binary file, and so the ascii message which
 .I newsyslog
 inserts to indicate the fact that the logs have been turned over
@@ -163,6 +163,6 @@ Theodore Ts'o, MIT Project Athena
 .br
 Copyright 1987, Massachusetts Institute of Technology
 .SH "SEE ALSO"
-syslogd(8), syslog(3), compress(1)
+syslogd(8), syslog(3), gzip(1)
 .ns
 .sp
