--- a/newsyslog.8
+++ b/newsyslog.8
@@ -1,9 +1,7 @@
-.TH NEWSYSLOG 8 "January 12, 1989" "Project Athena"
-.ns
 .\" This file contains changes from the Open Software Foundation.
 .\"
 .\"	from: @(#)newsyslog.8
-.\"	$Id: newsyslog.8,v 1.1 1997/09/26 21:07:07 woods Exp $
+.\"	$Id: newsyslog.8,v 1.2 1997/10/28 02:05:49 woods Exp $
 .\"
 .\" Copyright 1988, 1989 by the Massachusetts Institute of Technology
 .\" 
@@ -19,150 +17,156 @@
 .\" the suitability of this software for any purpose.  It is
 .\" provided "as is" without express or implied warranty.
 .\"
-.sp
-.SH NAME
-newsyslog \- maintain system log files to manageable sizes
-.SH SYNOPSIS
-.B /usr/bin/newsyslog
-[
-.B \-vnr
-] [
-.B \-f
-.I configuration file
-]
-.SH DESCRIPTION
-.I Newsyslog
+.Dd January 12, 1989
+.Dt NEWSYSLOG 8
+.Os
+.Sh NAME
+.Nm newsyslog
+.Nd maintain system log files to manageable sizes
+.Sh SYNOPSIS
+.Nm newsyslog
+.Op Fl rnv
+.Op Fl f Ar config_file
+.Sh DESCRIPTION
+.Nm Newsyslog
 is a program that should be scheduled to run periodically by
-.IR crontab .
+.Xr cron 8 .
 When it is executed it archives log files if necessary.  If a log file
 is determined to require archiving, 
-.I newsyslog
+.Nm
 rearranges the files so that ``logfile'' is empty, ``logfile.0'' has
 the last period's logs in it, ``logfile.1'' has the next to last
 period's logs in it, and so on, up to a user-specified number of
 archived logs.  Optionally the archived logs can be compressed to save
 space. 
-.PP
+.Pp
 A log can be archived because of two reasons.  The log file can have
 grown bigger than a preset size in kilobytes, or a preset number of
 hours may have elapsed since the last log archive.  The granularity of
-.I newsyslog
-is dependent on how often it is scheduled to run in crontab.  Since
-the program is quite fast, it may be scheduled to run every hour
+.Nm
+is dependent on how often it is scheduled to run by
+.Xr cron 8 .
+Since the program is quite fast, it may be scheduled to run every hour
 without any ill effects.
-.PP
+.Pp
 When starting up, 
-.I newsyslog
+.Nm
 reads in a configuration file to determine which logs should be looked
 at.  By default, this configuration file is 
-.IR /etc/newsyslog.conf .
+.Pa /etc/newsyslog.conf .
 Each line of the file contains information about a particular log file
 that should be handled by
-.IR newsyslog .
-Each line has five mandatory fields and two optional fields, with a
+.Nm newsyslog .
+Each line has five mandatory fields and three optional fields, with a
 whitespace separating each field.  Blank lines or lines beginning with
 ``#'' are ignored.  The fields of the configuration file are as
 follows: 
-.br
-	logfile name
-.br
-	owner.group of archives (optional)
-.br
-	mode of logfile & archives
-.br
-	number of archives
-.br
-	size of archives
-.br
-	archive interval
-.br
-	flags (optional)
-.PP
-The
-.I logfile name
-entry is the name of the system log file to be archived.
-.PP
-The optional
-.I owner.group
-entry specifies an ownership and group for the archive file.
-The "." is essential, even if the 
-.I owner
+.Pp
+.Bl -tag -width indent
+.It Ar logfile_name
+Name of the system log file to be archived.
+.It Ar owner.group
+Specify the owner and group for the archive file.
+The "." is essential, even if the
+.Ar owner
 or
-.I group
-field is left blank. The
-fields may be numeric, or a name which is looked up in 
-.I /etc/passwd
-or 
-.IR /etc/group .
-.PP
+.Ar group
+field is left blank.  The field may be numeric, or a name which is 
+present in
+.Pa /etc/passwd
+or
+.Pa /etc/group .
+.It Ar mode 
+Specify the mode of the log file and archives.
+.It Ar count
+Specify the number of archive files to be kept
+besides the log file itself.
+.It Ar size
+When the size of the log file reaches
+.Ar size ,
+the log file will be trimmed as described above.  If this field
+is replaced by a
+.Ar * ,
+then the size of the log file is not taken into account
+when determining when to trim the log file.
+of archives
+.It Ar interval
+When 
+.Ar interval
+hours have passed, the log file will be trimmed.  If this field is
+replaced by a
+.Ar * ,
+then the number of hours since the last time the log was
+trimmed will not be taken into consideration.
+.It Ar flags
+This optional field specifies if the archive should have any
+special processing done to the archived log files.
 The
-.I number of archives
-entry specifies the number of archives to be kept besides the log file
-itself.  
-.PP
-When the size of the logfile reaches 
-.I size of 
-.IR archives ,
-the logfile becomes trimmed as described above.  If this field is
-replaced by a ``*'', then the size of the logfile is not taken into
-account when determining when to trim the log file.
-.PP
+.Ar Z
+flag will make the archive files compress to save space by
+using
+.Xr gzip 1 .
 The
-.I number of hours
-entry specifies the time separation between the trimming of the log
-file.  If this field is replaced by a ``*'', the the number of hours
-since the last time the log was trimmed will not be taken into
-consideration.
-.PP
-The
-.I flags
-field specifies if the archives should have any special processing
-done to the archived log files.  The ``Z'' flag will make the archive
-files compressed to save space using /usr/ucb/compress.  The ``B'' flag
-means that the file is a binary file, and so the ascii message which
-.I newsyslog
-inserts to indicate the fact that the logs have been turned over
-should not be included.
-.PP
-.SH OPTIONS
+.Ar B
+flag means that the file is a binary file, and so the
+.Tn ASCII
+message which
+.Nm
+inserts to indicate the fact that the logs have been
+turned over should not be included.  The
+.Ar -
+flag means nothing, but can be used as a placeholder when the
+.Ar path_to_pid_file
+field is specified.
+.It Ar path_to_pid_file
+This optional field specifies
+the file name to read to find the daemon process id.  If this
+field is present, a SIGHUP is sent the process id contained in this
+file.  This field must start with "/" in order to be recognized
+properly.
+.El
+.Sh OPTIONS
 The following options can be used with newsyslog:
-.TP
-.B \-f \fIconfig-file
-instructs newsyslog to use 
-.I config-file
-instead of /etc/newsyslog.conf for its configuration file.
-.TP
-.B \-v
-places 
-.I newsyslog
+.Bl -tag -width indent
+.It Fl f Ar config_file
+Instruct newsyslog to use 
+.Ar config_file
+instead of
+.Pa /etc/newsyslog.conf
+for its configuration file.
+.It Fl v
+Place 
+.Nm
 in verbose mode.  In this mode it will print out each log and its
 reasons for either trimming that log or skipping it.
-.TP
-.B \-n
-causes
-.I newsyslog 
+.It Fl n
+Cause
+.Nm
 not to trim the logs, but to print out what it would do if this option
 were not specified.
-.TP
-.B \-r
-removes the restriction that
-.I newsyslog 
+.It Fl r
+Remove the restriction that
+.Nm
 must be running as root.  Of course, 
-.I newsyslog
+.Nm
 will not be able to send a HUP signal to
-.IR syslogd ,
+.Xr syslogd 8
 so this option should only be used in debugging.
-.SH FILES
-/etc/newsyslog.conf
-.SH BUGS
+.El
+.Sh FILES
+.Bl -tag -width /etc/newsyslog.confxxxx -compact
+.It Pa /etc/newsyslog.conf
+.Nm
+configuration file.
+.El
+.Sh BUGS
 Doesn't yet automatically read the logs to find security breaches.
-
-
-.SH AUTHOR
-Theodore Ts'o, MIT Project Athena
-.br
+.Sh AUTHOR
+.An Theodore Ts'o ,
+MIT Project Athena
+.Pp
 Copyright 1987, Massachusetts Institute of Technology
-.SH "SEE ALSO"
-syslogd(8), syslog(3), compress(1)
-.ns
-.sp
+.Sh "SEE ALSO"
+.Xr gzip 1 ,
+.Xr syslog 3 ,
+.Xr syslogd 8
