--- a/newsyslog.8
+++ b/newsyslog.8
@@ -1,7 +1,7 @@
 .\" This file contains changes from the Open Software Foundation.
 .\"
 .\"	from: @(#)newsyslog.8
-.\"	$Id: newsyslog.8,v 1.2 1997/10/28 02:05:49 woods Exp $
+.\"	$Id: newsyslog.8,v 1.3 1997/10/28 06:58:20 woods Exp $
 .\"
 .\" Copyright 1988, 1989 by the Massachusetts Institute of Technology
 .\" 
@@ -17,7 +17,7 @@
 .\" the suitability of this software for any purpose.  It is
 .\" provided "as is" without express or implied warranty.
 .\"
-.Dd January 12, 1989
+.Dd October 27, 1997
 .Dt NEWSYSLOG 8
 .Os
 .Sh NAME
@@ -34,11 +34,15 @@ is a program that should be scheduled to run periodically by
 When it is executed it archives log files if necessary.  If a log file
 is determined to require archiving, 
 .Nm
-rearranges the files so that ``logfile'' is empty, ``logfile.0'' has
-the last period's logs in it, ``logfile.1'' has the next to last
-period's logs in it, and so on, up to a user-specified number of
-archived logs.  Optionally the archived logs can be compressed to save
-space. 
+rearranges the files so that ``logfile'' is empty, ``logfile.0'' has the
+last period's logs in it, ``logfile.1'' has the next to last period's
+logs in it, and so on, up to a user-specified number of archived logs.
+The archived logs may also be compressed to save space.  After all file
+operations are done
+.Nm
+notifies the
+.Nm syslogd
+daemon and optionally other log-file specific daemons.
 .Pp
 A log can be archived because of two reasons.  The log file can have
 grown bigger than a preset size in kilobytes, or a preset number of
@@ -46,13 +50,15 @@ hours may have elapsed since the last log archive.  The granularity of
 .Nm
 is dependent on how often it is scheduled to run by
 .Xr cron 8 .
-Since the program is quite fast, it may be scheduled to run every hour
-without any ill effects.
+Since the program is quite fast, it may be scheduled to run at least
+every hour without any ill effects, which will achieve near the maximum
+granularity for elapsed time specification.  More frequent runs may be
+necessary to catch extremely fast growing log files.
 .Pp
 When starting up, 
 .Nm
 reads in a configuration file to determine which logs should be looked
-at.  By default, this configuration file is 
+at.  By default, this configuration file is
 .Pa /etc/newsyslog.conf .
 Each line of the file contains information about a particular log file
 that should be handled by
@@ -66,30 +72,26 @@ follows:
 .It Ar logfile_name
 Name of the system log file to be archived.
 .It Ar owner.group
-Specify the owner and group for the archive file.
-The "." is essential, even if the
-.Ar owner
-or
-.Ar group
-field is left blank.  The field may be numeric, or a name which is 
-present in
+This optional field specifies the owner and group for the archive file.
+The subfields may be numeric, or a name which is present in
 .Pa /etc/passwd
 or
 .Pa /etc/group .
 .It Ar mode 
-Specify the mode of the log file and archives.
+Specifies the file permissions of the log file and its archival copies
+in the standard three-digit octal format.
 .It Ar count
 Specify the number of archive files to be kept
 besides the log file itself.
 .It Ar size
-When the size of the log file reaches
+When the size of the log file reaches the number of kilobytes specified
+by
 .Ar size ,
 the log file will be trimmed as described above.  If this field
 is replaced by a
 .Ar * ,
 then the size of the log file is not taken into account
 when determining when to trim the log file.
-of archives
 .It Ar interval
 When 
 .Ar interval
@@ -101,11 +103,16 @@ trimmed will not be taken into consideration.
 .It Ar flags
 This optional field specifies if the archive should have any
 special processing done to the archived log files.
+.Pp
 The
 .Ar Z
 flag will make the archive files compress to save space by
 using
-.Xr gzip 1 .
+.Xr compress 1
+or
+.Xr gzip 1 ,
+depending on which was selected at compile time.
+.Pp
 The
 .Ar B
 flag means that the file is a binary file, and so the
@@ -113,17 +120,19 @@ flag means that the file is a binary file, and so the
 message which
 .Nm
 inserts to indicate the fact that the logs have been
-turned over should not be included.  The
+turned over should not be included.
+.Pp
+The
 .Ar -
 flag means nothing, but can be used as a placeholder when the
+field
 .Ar path_to_pid_file
-field is specified.
+is specified for entries without any flags.
 .It Ar path_to_pid_file
-This optional field specifies
-the file name to read to find the daemon process id.  If this
-field is present, a SIGHUP is sent the process id contained in this
-file.  This field must start with "/" in order to be recognized
-properly.
+This optional field specifies the file name to read to find the daemon
+process id.  If this field is present, a SIGHUP is sent the process id
+contained in this file.  This field must start with a slash (``/'') in
+order to be recognized properly.
 .El
 .Sh OPTIONS
 The following options can be used with newsyslog:
@@ -142,8 +151,15 @@ reasons for either trimming that log or skipping it.
 .It Fl n
 Cause
 .Nm
-not to trim the logs, but to print out what it would do if this option
-were not specified.
+not to trim the logs, but to print on its standard output what it would
+do if this option were not specified.  If used without the
+.Fl v
+(verbose) flag the result should be a shell script that would duplicate
+the actions of
+.Nm
+were it to be run without the
+.Fl n
+flag (and assuming of course the script were run by root).
 .It Fl r
 Remove the restriction that
 .Nm
@@ -151,7 +167,7 @@ must be running as root.  Of course,
 .Nm
 will not be able to send a HUP signal to
 .Xr syslogd 8
-so this option should only be used in debugging.
+or most other daemons so this option should only be used in debugging.
 .El
 .Sh FILES
 .Bl -tag -width /etc/newsyslog.confxxxx -compact
@@ -159,14 +175,54 @@ so this option should only be used in debugging.
 .Nm
 configuration file.
 .El
+.Sh HISTORY
+Originated at MIT Project Athena.
+.Pp
+Someone at OSF hacked on it too.
+.Pp
+A
+.Nm
+command appeared in
+.Bx 4.4 .
+.Pp
+The
+.Ar path_to_pid_file
+optional field was added by FreeBSD.
+.Pp
+There was an extremely simple shell script of similar purpose,
+.Pa /usr/lib/newsyslog ,
+in SunOS-4.1.
 .Sh BUGS
-Doesn't yet automatically read the logs to find security breaches.
+Log files will not be rolled over at the same time of day unless
+.Nm
+is run only once per day at a regular time.  In fact the roll-over time
+will creep around the clock.  This could be overcome by adding an
+optional
+.Ar time_to_archive
+subfield to the
+.Ar interval
+field (eg.  ``168@Sun:00'' to roll over Sunday at midnight).
+.Pp
+Fields such as
+.Ar interval
+and
+.Ar size
+should allow the units of measurement to be specified.
+.Pp
+There should be a separate
+.Xr newsyslog.conf 5
+manual page.
+.Pp
+If compression is turned on after the series of archival copies has been
+created, old uncompressed archives will not be compressed.
 .Sh AUTHOR
 .An Theodore Ts'o ,
 MIT Project Athena
 .Pp
 Copyright 1987, Massachusetts Institute of Technology
 .Sh "SEE ALSO"
+.Xr compress 1 ,
+.Xr cron 8 ,
 .Xr gzip 1 ,
 .Xr syslog 3 ,
 .Xr syslogd 8
