--- a/NEWS
+++ b/NEWS
@@ -7,14 +7,22 @@ Please send bug reports to bugs@robohack.planix.com
 
 * User-visible changes new in newsyslog-$Name:  $.
 
+- none.
+
+* User-visible changes new in newsyslog-1.0.90.
+
+- added '0' flag to leave logfile.0 uncompressed.
+
+* User-visible changes new in newsyslog-0.1.91.
+
 - don't add status message to new log file in order to ensure that
 stagnant log files stay unchanged (i.e. the "empty" check prevents them
 from being rolled over unnecessarily).
 
-* User-visible changes new in newsyslog-1.80.
+* User-visible changes new in newsyslog-0.1.80.
 
 - added -M|-m option
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslgo:$Name:  $:$Id: NEWS,v 1.2 1997/11/15 07:09:17 woods Exp $"
+#ident	"@(#)newsyslgo:$Name:  $:$Id: NEWS,v 1.3 1998/03/05 06:44:57 woods Exp $"
