--- a/NEWS
+++ b/NEWS
@@ -5,9 +5,18 @@ This file:  Copyright (C) 1997 Planix, Inc.
 Please send bug reports to bugs@robohack.planix.com
 
 
-* User-visible changes new in newsyslog-$Name:  $.
+* User-visible changes new in newsyslog-1.0.92.
 
-- none.
+- the '0' flag actually works (instead of just showing that it would
+  work in verbose mode).
+
+- a better attempt is made to determine the age of the log file when no
+  log.0* file exists (by attempting to parse the timestamp from the
+  first record of the current log file).
+
+* User-visible changes new in newsyslog-1.0.91.
+
+- none
 
 * User-visible changes new in newsyslog-1.0.90.
 
@@ -25,4 +34,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslgo:$Name:  $:$Id: NEWS,v 1.3 1998/03/05 06:44:57 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.4 1998/03/15 21:24:48 woods Exp $"
