--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ Please send bug reports to bugs@robohack.planix.com
 
 * User-visible changes new in newsyslog-1.0.92.
 
+- PID file can be /dev/null to avoid notifying any daemon.
+
 - the '0' flag actually works (instead of just showing that it would
   work in verbose mode).
 
@@ -34,4 +36,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.4 1998/03/15 21:24:48 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.5 1998/03/15 22:12:31 woods Exp $"
