--- a/README
+++ b/README
@@ -24,8 +24,8 @@ TO BUILD NEWSYSLOG
 If you are building newsyslog on a BSD-based system you can simply use
 "Makfile.BSD".  This is in fact necessary if your system requires
 installation of pre-formatted manual pages (otherwise you'll have to
-install them by hand).  Check the default options in "Makefile.BSD" then
-simply run:
+install them by hand).  Copy "Makefile.BSD-dist" to "Makefile.BSD",
+check and possibly update the default options in it then simply run:
 
 	make -f Makefile.BSD
 
@@ -84,4 +84,4 @@ software is available at:
 						<woods@planix.com>
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.3 1998/03/16 01:30:15 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.4 1998/03/16 02:32:06 woods Exp $"
