--- a/ToDo
+++ b/ToDo
@@ -53,6 +53,8 @@ suggestions and comments are also encouraged.
 - add support for specifying size and interval units other than KB & hrs.
 
 - think about need to add an optional signal number/name to use other
-  than SIGHUP for notifying the log-writing daemon.
+  than SIGHUP for notifying the log-writing daemon.  FreeBSD added this
+  feature in their 1.20 because "F.e. apache restarts less agressively
+  on USR1 then on HUP."
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: ToDo,v 1.3 1998/03/16 01:29:03 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: ToDo,v 1.4 1999/01/17 06:36:11 woods Exp $"
