- version is 1.0.96-Preview

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,9 @@ This file:  Copyright (C) 1997 Planix, Inc.
 Please send bug reports to bugs@robohack.planix.com
 
 
+* User-visible changes new in newsyslog-1.0.96.
+
+
 * User-visible changes new in newsyslog-1.0.95.
 
 - just bug fixes.
@@ -60,4 +63,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.7 1999/02/24 18:28:20 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.8 1999/02/24 20:07:16 woods Exp $"
