--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 NEWSYSLOG -- A portable and enhanced version of this old standard
 
-This file:  Copyright (C) 1997 Planix, Inc. - All rights reserved.
+This file:  Copyright (C) 1997,1998,1999 Planix, Inc.
+	    see COPYING for details
 
 This is an updated version of a package put together by Theodore Ts'o ,
 of MIT Project Athena (which is included in NetBSD, FreeBSD, OpenBSD,
@@ -21,16 +22,25 @@ What does this newsyslog have to offer?
 
 TO BUILD NEWSYSLOG
 
-If you are building newsyslog on a BSD-based system you can simply use
+If you are building newsyslog on a BSD-based system you can also use
 "Makfile.BSD".  This is in fact necessary if your system requires
 installation of pre-formatted manual pages (otherwise you'll have to
-install them by hand).  Copy "Makefile.BSD-dist" to "Makefile.BSD",
-check and possibly update the default options in it then simply run:
+install them by hand).  The simplest way to do this is to run the
+"newsyslog2netbsd.sh" script, then go into the "import.d" directory
+created by the script, check the Makefile and possibly update the
+default options in it, and finaly then simply run "make".  Note that if
+you want to change the location of the install, or other pathnames then
+you should change them in the "newsyslog2netbsd.sh" script *before* you
+run it:
 
-	make -f Makefile.BSD
+	# inspect and/or edit newsyslog2netbsd.sh
+	sh newsyslog2netbsd.sh
+	cd import.d
+	make
+	make istall
 
 Newsyslog can also be built using the GNU Autoconf based build system
-and a ``normal'' "make".
+and a ``normal'' (i.e. Unix compatible) "make".
 
 Please see the file "INSTALL" for overall instructions on how to
 configure and build this package using the GNU Autoconf generated
@@ -84,4 +94,4 @@ software is available at:
 						<woods@planix.com>
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.4 1998/03/16 02:32:06 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.5 1999/08/25 01:23:12 woods Exp $"
