--- a/NEWS
+++ b/NEWS
@@ -6,8 +6,22 @@ This file:  Copyright (C) 1997,1998,1999 Planix, Inc.
 Please send bug reports to bugs@robohack.planix.com
 
 
+* User-visible changes new in newsyslog-1.0.97.
+
+- improved error messages by including line numbers.
+
+- new optional "sigtype" field (ala NetBSD).
+
+- POSIX demands that user and group values for chmod be separated by
+  colons (since `.' *could* be legal in a user-name), so now the
+  optional second field must similarly be separated into user and group
+  sub-fields with a colon (`:').
+
+- various bug fixes.
+
 * User-visible changes new in newsyslog-1.0.96.
 
+- just bug fixes.
 
 * User-visible changes new in newsyslog-1.0.95.
 
@@ -64,4 +78,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.9 1999/08/24 23:14:38 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.10 2000/07/07 17:30:02 woods Exp $"
