--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ This file:  Copyright (C) 1997,1998,1999 Planix, Inc.
 Please send bug reports to bugs@robohack.planix.com
 
 
+* User-visible changes new in newsyslog-1.0.99.
+
+
 * User-visible changes new in newsyslog-1.0.98.
 
 - the log roll-over interval may now be specified as a "trim time",
@@ -104,4 +107,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.11 2000/12/01 20:05:34 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.12 2000/12/01 22:25:27 woods Exp $"
