--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Please send bug reports to bugs@robohack.planix.com
 
 * User-visible changes new in newsyslog-1.0.99.
 
+- fixed logic bug in comparison of PID filename with /dev/null.
 
 * User-visible changes new in newsyslog-1.0.98.
 
@@ -107,4 +108,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.12 2000/12/01 22:25:27 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.13 2000/12/08 20:46:31 woods Exp $"
