--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,14 @@
 NEWSYSLOG NEWS -- history of user-visible changes.
 
-This file:  Copyright (C) 1997,1998,1999 Planix, Inc.
+This file:  Copyright (C) 1997,1998,1999,2000,2001 Planix, Inc.
 	    see COPYING for details
 
 Please send bug reports to bugs@robohack.planix.com
 
+
+* User-visible changes new in newsyslog-1.0.100.
+
+- just portability fixes (tested on Solaris-2.6 now)
 
 * User-visible changes new in newsyslog-1.0.99.
 
@@ -113,4 +117,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.14 2001/02/23 00:49:26 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.15 2001/03/06 02:08:04 woods Exp $"
