--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,20 @@
 NEWSYSLOG NEWS -- history of user-visible changes.
 
-This file:  Copyright (C) 1997,1998,1999,2000,2001 Planix, Inc.
+This file:  Copyright (C) 1997,1998,1999,2000,2001,2002 Planix, Inc.
 	    see COPYING for details
 
 Please send bug reports to bugs@robohack.planix.com
 
+
+* User-visible changes new in newsyslog-1.0.101.
+
+- signals are displayed symbolically in error messages
+
+- run intervals (-i) of one minute (or less) are no longer allowed.
+
+- rest are just portability fixes (more Solaris and Linux portability)
+  (esp. including use of str2sig() for portable signal name translation
+  on SunOS-5)
 
 * User-visible changes new in newsyslog-1.0.100.
 
@@ -117,4 +127,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.15 2001/03/06 02:08:04 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.16 2002/01/04 03:29:24 woods Exp $"
