--- a/ToDo
+++ b/ToDo
@@ -77,5 +77,12 @@ suggestions and comments are also encouraged.
   --with-compress_options=options pass these additional options to
                                   compress (or gzip or bzip2)
 
+- fix str2sig() compatability function so that it can recognise
+  alternative signal names, not just the "official" ones from
+  sys_signame.  (there's no easy way to do this except by creating a
+  complete new table of names with explicit number mappings, instead of
+  using the index as the implicit mapping, and this table will have to
+  be created at compile-time...)
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: ToDo,v 1.8 2002/01/03 06:45:48 woods Exp $"
+
+#ident	"@(#)newsyslog:$Name:  $:$Id: ToDo,v 1.9 2002/01/05 05:03:18 woods Exp $"
