--- a/NEWS
+++ b/NEWS
@@ -8,13 +8,19 @@ Please send bug reports to bugs@robohack.planix.com
 
 * User-visible changes new in newsyslog-1.0.101.
 
-- signals are displayed symbolically in error messages
+- a bug in parsing timespecs with "interval-trimtime" that caused
+  strange errors on some machines has been fixed.
+
+- signals are displayed symbolically in error messages.
 
 - run intervals (-i) of one minute (or less) are no longer allowed.
 
-- rest are just portability fixes (more Solaris and Linux portability)
-  (esp. including use of str2sig() for portable signal name translation
-  on SunOS-5)
+- verbose output shows the trim time in local time (in ISO-8601 format)
+  now instead of as a Unix epoch time.
+
+- the rest of the changes are just portability fixes (more Solaris and
+  Linux portability) (though esp. including use of str2sig() for
+  portable signal name translation on SunOS-5).
 
 * User-visible changes new in newsyslog-1.0.100.
 
@@ -127,4 +133,4 @@ from being rolled over unnecessarily).
 - separated out newsyslog.conf.5 manual page
 - improved documentation
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.16 2002/01/04 03:29:24 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.17 2002/01/05 19:29:58 woods Exp $"
