--- a/README
+++ b/README
@@ -96,17 +96,20 @@ In general you need only run the following command sequence:
 
 (see "CUSTOM CONFIGURATION OPTIONS" below for other "configure" options)
 
-On systems without the "doc" macros (or without "nroff"), you can still
-install and read the distributed 'cat'-table manual pages.  For example
-if you get an error during the first "make" that says something like
-"nroff: Cannot find library -mandoc", or "nroff: not found", run the
-following command instead of running "make install":
+On systems without the "doc" macros (or without "nroff", or even with an
+incompatible version of "soelim"), you can still install and read the
+distributed 'cat'-table manual pages.
+
+For example if you get an error during the first "make" that says
+something like "nroff: Cannot find library -mandoc", or "nroff: not
+found", or "-I: No such file or directory", then run the following
+command instead of running "make install":
 
 	make copy-dist-catman install
 
-This doesn't guarantee your "man" command will be able to find and
+This does not guarantee your "man" command will be able to find and
 present the result, but it gets you to the stage of having something to
-present instead of being stuck with just the "doc" source.
+read instead of being stuck with just the "doc" source.
 
 
 CUSTOM CONFIGURATION OPTIONS
@@ -162,4 +165,4 @@ or:
 						<woods@weird.com>
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.9 2002/02/09 21:47:54 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.10 2002/03/01 22:45:38 woods Exp $"
