--- a/ToDo
+++ b/ToDo
@@ -66,7 +66,9 @@ suggestions and comments are also encouraged.
 
     http://www.clave.gr.jp/~eto/software/newsyslog/newsyslog.diff.gz
 
-- add a '--with-bzip2' option
+- think about FreeBSD's "archive to directory" (-a archdir) option (1.26)
+
+- add a '--with-bzip2' configure option
 
 - add a '--with-compress_options=options' option too
 
@@ -80,5 +82,12 @@ suggestions and comments are also encouraged.
   using the index as the implicit mapping, and this table will have to
   be created at compile-time...)
 
+- think about OpenBSD's "monitor" feature:  an 'M' in the flag field
+  which says the next field is an account name to receive an e-mail
+  notification whenever the log file is rolled over.
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: ToDo,v 1.10 2002/03/01 22:46:15 woods Exp $"
+- think about OpenBSD's optional command-run feature which uses the
+  pid_file field when the signal number is specified '-1' to specify a
+  command to run instead of sending a signal.
+
+#ident	"@(#)newsyslog:$Name:  $:$Id: ToDo,v 1.11 2002/05/10 17:45:08 woods Exp $"
