--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 NEWSYSLOG -- A portable and enhanced version of this old standard
 
-This file:  Copyright (C) 1997,1998,1999,2000,2001 Planix, Inc.
+This file:  Copyright (C) by Planix, Inc.
 	    see COPYING for details
 
 This is an updated version of a package put together by Theodore Ts'o ,
@@ -165,4 +165,4 @@ or:
 						<woods@weird.com>
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.10 2002/03/01 22:45:38 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.11 2002/05/10 17:45:15 woods Exp $"
