--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,13 @@ This file:  Copyright (C) Planix, Inc.
 Please send bug reports to bugs@robohack.planix.com
 
 
+* User-visible changes new in newsyslog-1.0.104.
+
+- fix a bug in the signal name translation that affects all GNU/Linux
+  systems and would cause any signals above #6 to be sent with one added
+  to their values (eg. SIGUSR1, which is 10 is sent as 11, which SIGSEGV)
+
+
 * User-visible changes new in newsyslog-1.0.103.
 
 - a new debugging (-d) option allows various levels of verbose internals
@@ -172,4 +179,4 @@ from being rolled over unnecessarily).
 - improved documentation
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.20 2002/05/10 18:37:48 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.21 2002/08/09 16:02:41 woods Exp $"
